--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <body>
     <!-- Navegação -->
 
-
     <!-- Cabeçalho -->
     <header>
       <div class="foto-meio">
-        <img src="./img/foto perfil 575x575.jpg" alt="Foto de Igor Francesconi" />
+        <img
+          src="./img/foto perfil 575x575.jpg"
+          alt="Foto de Igor Francesconi"
+        />
       </div>
       <h1>Igor Francesconi</h1>
       <h2>Currículo</h2>
@@ -26,14 +28,15 @@
       <section class="card">
         <h3>Sobre Mim</h3>
         <p>
-          Olá! Meu nome é Igor, tenho 20 anos. Sou estudante de Sistemas da Informação
-          na Universidade Estácio de Sá - Cabo Frio (5° período), com conhecimento
-          sólido em HTML e CSS, além de noções intermediárias em JavaScript. Já
-          desenvolvi projetos que utilizam essas linguagens, como páginas responsivas e
-          funcionalidades dinâmicas para aplicações web. Estou em constante aprendizado e
-          sempre buscando aprimorar minhas habilidades em desenvolvimento Front-End.
-          Tenho grande interesse em construir interfaces intuitivas e bem estruturadas,
-          aplicando boas práticas e criatividade nos meus trabalhos. Estou aberto a novos
+          Olá! Meu nome é Igor, tenho 20 anos. Sou estudante de Sistemas da
+          Informação na Universidade Estácio de Sá - Cabo Frio (5° período), com
+          conhecimento sólido em HTML e CSS, além de noções intermediárias em
+          JavaScript. Já desenvolvi projetos que utilizam essas linguagens, como
+          páginas responsivas e funcionalidades dinâmicas para aplicações web.
+          Estou em constante aprendizado e sempre buscando aprimorar minhas
+          habilidades em desenvolvimento Front-End. Tenho grande interesse em
+          construir interfaces intuitivas e bem estruturadas, aplicando boas
+          práticas e criatividade nos meus trabalhos. Estou aberto a novos
           desafios e oportunidades para desenvolver minha carreira.
         </p>
       </section>
@@ -43,23 +46,38 @@
         <h3>Projetos</h3>
         <p>
           1. <strong>Site do Yu-Gi-Oh!</strong><br />
-          Criação de um site interativo e visualmente atrativo, utilizando HTML, CSS e
-          um pouco de JavaScript para elementos dinâmicos. O site é dedicado ao universo do Yu-Gi-Oh!,
-          com informações sobre cartas, personagens e eventos.<br />
-          Acesse o projeto: <a href="https://igorfrancesconi.github.io/projeto-yu-gi-oh/" target="_blank">Site do Yu-Gi-Oh!</a>
+          Criação de um site interativo e visualmente atrativo, utilizando HTML,
+          CSS e um pouco de JavaScript para elementos dinâmicos. O site é
+          dedicado ao universo do Yu-Gi-Oh!, com informações sobre cartas,
+          personagens e eventos.<br />
+          Acesse o projeto:
+          <a
+            href="https://igorfrancesconi.github.io/projeto-yu-gi-oh/"
+            target="_blank"
+            >Site do Yu-Gi-Oh!</a
+          >
         </p>
         <p>
           2. <strong>Site do Santos FC</strong><br />
-          Desenvolvimento de uma página para o time de futebol Santos FC, utilizando HTML e
-          CSS para estruturação e design responsivo. O site inclui informações sobre o time,
-          jogadores e estatísticas.<br />
-          Acesse o projeto: <a href="https://igorfrancesconi.github.io/site-do-santos/" target="_blank">Site do Santos FC</a>
+          Desenvolvimento de uma página para o time de futebol Santos FC,
+          utilizando HTML e CSS para estruturação e design responsivo. O site
+          inclui informações sobre o time, jogadores e estatísticas.<br />
+          Acesse o projeto:
+          <a
+            href="https://igorfrancesconi.github.io/site-do-santos/"
+            target="_blank"
+            >Site do Santos FC</a
+          >
         </p>
         <p>
           3. <strong>Gerador de QR Code</strong><br />
-          Criação de um gerador de QR code simples utilizando HTML e CSS, permitindo que
-          os usuários insiram um link e gerem um código QR de maneira rápida.<br />
-          Acesse o projeto: <a href="https://igorfrancesconi.github.io/QR-CODE/" target="_blank">Gerador de QR Code</a>
+          Criação de um gerador de QR code simples utilizando HTML e CSS,
+          permitindo que os usuários insiram um link e gerem um código QR de
+          maneira rápida.<br />
+          Acesse o projeto:
+          <a href="https://igorfrancesconi.github.io/QR-CODE/" target="_blank"
+            >Gerador de QR Code</a
+          >
         </p>
       </section>
     </main>
@@ -67,7 +85,7 @@
     <!-- Rodapé -->
     <footer>
       <a
-        href="https://github.com/IgorFrancesconi/IgorFrancesconi"
+        href="https://github.com/IgorFrancesconi"
         target="_blank"
         rel="noopener noreferrer"
         aria-label="GitHub"
@@ -91,4 +109,3 @@
     </footer>
   </body>
 </html>
-
